corrected scaling on small screens

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -241,7 +241,7 @@ body{
   margin-top: 10px;
   margin-bottom: 30px;
   box-shadow: 0px 3px 0px #919091;
-  height: auto;
+  // height: auto;
 
 }
 
@@ -255,6 +255,8 @@ body{
   height: inherit;
   padding: 30px;
   margin-bottom: 30px;
+  box-shadow: 0px 3px 0px #919091;
+
 
 }
 
@@ -315,6 +317,7 @@ body{
   }
 
   .tenboards{
+    flex-wrap: wrap;
   }
 
   .tenboards img{
@@ -363,8 +366,5 @@ body{
   .bottomtext h3{
     font-size: 36px;
   }
-
-
-
 
 }
